# mariadb-galera-operator

./: Makefile  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  run_tests
src/: charm.py  mariadbserver.py
tests/: test_charm.py
