[tool.poetry]
name = "mariadb-galera-operator"
version = "0.1.0"
description = ""
authors = ["Martin Rusev <martin@amon.cx>"]

[tool.poetry.dependencies]
python = "^3.8"
ops = {git = "https://github.com/canonical/operator.git", rev = "5943a59ccde766c832d59229f3ac431587799f34"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
